--- a/src/main/webapp/static/html/catcher.html
+++ b/src/main/webapp/static/html/catcher.html
@@ -61,6 +61,7 @@
 	</div>
 </body>
 
+<script type="text/javascript" src="http://counter.sina.com.cn/ip/" charset="gb2312"></script>
 <script type="text/javascript" src="../js/jquery-2.1.0.js"></script>
 <script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="../bootstrap/js/bootstrap-select.js"></script> 
@@ -71,7 +72,12 @@
 <script src="../highcharts/js/highcharts.js" type="text/javascript"></script>
 
 
-<script type="text/javascript">
 
+<script type="text/javascript">
+alert(ILData[0]+"");
+alert(ILData[1]+"");
+alert(ILData[2]+"");
+alert(ILData[3]+"");
+alert(ILData[4]+"");
 </script>
 </html>
